# cqrs-course-dataset

./: .env.sample  README.md  docker-compose.yml  load_restaurants.py  load_reviews.py  load_users.py  pyproject.toml  synthetic_restaurants.py  synthetic_reviews.py  synthetic_users.py
data/: restaurant.json  restaurant_category.json  restaurant_image.json  restaurant_location.json  review_10000.json  review_20000.json  review_30000.json  review_40000.json  review_50000.json  review_60000.json  review_70000.json  review_75572.json  review_photo_13464.json  review_photo_20178.json  review_photo_26883.json  review_photo_33557.json  review_photo_40280.json  review_photo_46911.json  review_photo_53622.json  review_photo_60350.json  review_photo_67045.json  review_photo_6740.json  review_photo_73677.json  review_photo_75572.json  user_account.json  user_profile.json
initdb/: ddl.sql
